--- a/src/index.css
+++ b/src/index.css
@@ -289,3 +289,23 @@ body {
         @apply mx-2;
     }
 }
+
+footer {
+  background-color: var(--text-color);
+  color: var(--background-color);
+  padding: 1rem 0;
+  text-align: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+footer a {
+  color: var(--background-color);
+  text-decoration: none;
+  margin: 0 0.5rem;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
